...
                                        <rect key="frame" x="0.0" y="202" width="320" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oFK-D3-uSL" id="2g4-zo-w4W">
                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Download" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AZt-kk-Obh">
                                                    <rect key="frame" x="15" y="0.0" width="290" height="43"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Oay-VD-j2B" id="CLt-3M-zRr"/>
                            <outlet property="delegate" destination="Oay-VD-j2B" id="ycj-Rj-dUD"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Flashcards" id="yxT-Ze-qZi">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="MJl-sB-BEE">
                            <connections>
                                <segue destination="v8q-8Y-vl9" kind="show" id="Zuu-JP-S0K"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
